# 0pnMatrx

./: .dockerignore  .env.example  .gitignore  ABI_VERIFICATION_NEEDED.md  CHANGELOG.md  CONTRIBUTING.md  CREDENTIALS_NEEDED.md  Caddyfile  Dockerfile  FEED_ALGORITHM.md  LICENSE  Procfile  README.md  REAL_ESTATE.md  ROADMAP.md  SECURITY_STUB.md  SPONSORS.md  demo.py  docker-compose.prod.yml  docker-compose.yml  foundry.toml  install.sh  opencollective.json  openmatrix.config.json.example  pyproject.toml  railway.toml  remappings.txt  requirements-dev.txt  requirements-monitoring.txt  requirements.txt  setup.py  setup_communications.py  setup_telegram.py  start.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SPONSORS.md
blockchain/: README.md
bridge/: __init__.py  approval_gate.py  deployer.py  exporter.py  manifest.py  mobile_converter.py  sanitizer.py
cli/: __init__.py  __main__.py  gateway.py  info.py
contracts/: DEPLOYMENT_GUIDE.md  MatrixAttestation.sol  MatrixPaymaster.sol  OpenMatrixAccount.sol  OpenMatrixAccountFactory.sol  OpenMatrixAttestation.sol  OpenMatrixDAO.sol  OpenMatrixDEX.sol  OpenMatrixDID.sol  OpenMatrixInsurance.sol  OpenMatrixMarketplace.sol  OpenMatrixNFT.sol  OpenMatrixPaymaster.sol  OpenMatrixStaking.sol  OpenMatrixVerifyingPaymaster.sol  PropertyDeed.sol  PropertyEscrow.sol  __init__.py  deploy.py  deployer.py  eas_deployer.py  neosafe_verifier.py
dedication/: README.md
docs/: COMPLETE_CAPABILITY_MAP.md  FINETUNING_GUIDE.md  MONETIZATION.md  OPEN_COLLECTIVE.md  OPS.md  PLUGIN_DEVELOPMENT.md  REVENUE_STREAMS.md  ROUTES.md  RUNBOOK.md  SPONSORSHIP.md  agents.md  api-reference.md  architecture.md  blockchain.md  unified-rexhepi-framework.md  what-makes-0pnmatrx-different.md
education/: COMMUNITY_GUIDE.md  GUMROAD_LISTINGS.md  README.md
examples/: 01_contract_conversion.py  02_defi_loan.py  03_nft_with_royalties.py  04_parametric_insurance.py  05_marketplace_flow.py  06_eas_attestation_chain.py  07_revenue_to_neosafe.py  08_oracle_routing.py  09_full_user_journey.py  README.md
extensions/: README.md  registry.json  schema.json
gateway/: __init__.py  __main__.py  apple_auth.py  bridge.py  doctor.py  event_broadcaster.py  iap.py  openapi.yaml  paymaster.py  security_gate.py  server.py  service_routes.py
grants/: BASE_ECOSYSTEM_FUND.md  ETHEREUM_FOUNDATION_ESP.md  GITCOIN_GRANTS.md  GITHUB_SPONSORS_ACTIVATION.md  OPEN_COLLECTIVE_ACTIVATION.md  OPTIMISM_RPGF.md  SUBMISSION_CHECKLIST.md
gumroad/: PACK_DESCRIPTIONS.md  README.md
hivemind/: README.md  __init__.py  events.py  lifecycle.py  orchestrator.py  test_orchestration.py
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
launch/: announcements.md  app-store-listing.md  discord-setup.md
migration/: README.md  __init__.py  autogpt_importer.py  base.py  coinbase_importer.py  crewai_importer.py  ens_importer.py  generic_importer.py  langchain_importer.py  metamask_importer.py  migrate.py  openai_assistants_importer.py  opensea_importer.py  snapshot_importer.py
plugins/: __init__.py  component_registry.py  loader.py  manifest_schema.py
runtime/: __init__.py  access_policy.py  react_loop.py
scripts/: __init__.py  build-contracts.sh  deploy_all.py  deploy_and_configure.sh  generate_changelog.py  generate_launch_pdf.py  generate_route_table.py  ops.sh  prepare_aa_deploy.py  prepare_finetuning.py  prepare_release.py  register_eas_schemas.py  rotate_credentials.sh  stripe_setup.py  verify_abis.py  verify_platform.py
sdk/: README.md  __init__.py  client.py  openmatrix_sdk.py  test_sdk.py
sdk-js/: README.md  package.json  tsconfig.json
setup/: __init__.py  _shared.py  discord.py  email.py  ios_push.py  slack.py  sms.py  telegram.py  web_chat.py  webhook.py  whatsapp.py
skills/: audit_contract.py  check_balance.py  deploy_contract.py  explain_transaction.py  gas_estimate.py
swift-blocks/: ComponentRegistry.swift  FeatureGate.swift  README.md  StoreKitManager.swift  SubscriptionStatusView.swift  SubscriptionTier.swift  (+1 more)
(+507 files in other folders)
